Added netlify & circleci config

--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "start": "yarn watch",
     "start-sb": "start-storybook -c storybook",
     "start-docs": "start-storybook -c storybook --docs",
-    "build": "babel src -d dist --config-file ./babel.config.js",
+    "build": "run-s build:*",
+    "build:pkg": "babel src -d dist --config-file ./babel.config.js",
+    "build:sb": "build-storybook -c storybook -o storybook/dist/sb",
+    "build:docs": "build-storybook -c storybook -o storybook/dist/docs --docs",
+    "serve-sb": "serve storybook/dist/sb",
+    "serve-docs": "serve storybook/dist/docs",
     "watch": "yarn build --watch",
     "reset": "yarn clean && rimraf node_modules",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist && rimraf storybook/dist",
+    "lint-ci": "yarn eslint -- -- 0 && yarn stylelint",
+    "eslint": "run-s \"eslint:* --max-warnings={1:--1}\"",
+    "eslint:pkg": "eslint --ext .js,.jsx src",
+    "eslint:stories": "eslint --ext .js,.jsx stories",
+    "stylelint": "run-s stylelint:*",
+    "stylelint:pkg": "stylelint \"src/**/*.css\"",
+    "stylelint:stories": "stylelint \"stories/**/*.css\"",
+    "deploy-docs": "netlify deploy --prod --dir=storybook/dist/docs --site=df98c158-8a37-4882-b8b9-59540f32c204",
+    "netlify-ci-docs": "yarn build:docs"
   },
   "peerDependencies": {
     "lodash": "*",
@@ -49,6 +63,8 @@
     "eslint": "6.8.0",
     "eslint-plugin-mdx": "1.6.5",
     "lodash": "4.17.15",
+    "netlify-cli": "2.25.0",
+    "npm-run-all": "4.1.5",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
