--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "stylelint": "run-s stylelint:*",
     "stylelint:pkg": "stylelint \"src/**/*.(js|jsx)\"",
     "deploy-docs": "netlify deploy --prod --dir=storybook/dist/docs --site=df98c158-8a37-4882-b8b9-59540f32c204",
-    "netlify-ci-docs": "yarn install && yarn build:docs"
+    "netlify-ci-docs": "yarn install && yarn build:docs",
+    "release": "yarn np --no-cleanup --no-tests"
   },
   "peerDependencies": {
     "react": "^16.12.0",
@@ -62,6 +63,7 @@
     "eslint-plugin-mdx": "1.6.5",
     "lodash": "4.17.15",
     "netlify-cli": "2.25.0",
+    "np": "5.2.1",
     "npm-run-all": "4.1.5",
     "prop-types": "15.7.2",
     "react": "16.12.0",
