Updated release script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "storybook-icon-gallery",
   "version": "0.2.1",
   "description": "An icon gallery for Storybook docs that support multiple icon variants.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/gsoft-inc/storybook-icon-gallery.git",
   "author": "Groupe GSoft inc.",
   "license": "Apache-2.0",
@@ -27,7 +27,7 @@
     "stylelint:pkg": "stylelint \"src/**/*.(js|jsx)\"",
     "deploy-docs": "netlify deploy --prod --dir=storybook/dist/docs --site=df98c158-8a37-4882-b8b9-59540f32c204",
     "netlify-ci-docs": "yarn install && yarn build:docs",
-    "release": "yarn login && yarn build:pkg && yarn np --no-cleanup --no-tests --contents=dist"
+    "release": "yarn login && yarn build:pkg && yarn np --no-cleanup --no-tests"
   },
   "peerDependencies": {
     "react": "^16.12.0",
