--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "peerDependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-spring": "^8.0.0"
+    "react-dom": "^16.12.0"
   },
   "dependencies": {
     "prop-types": "*",
@@ -70,7 +69,6 @@
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-spring": "8.0.27",
     "rimraf": "3.0.0",
     "serve": "11.2.0",
     "stylelint": "12.0.0"
