--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "peerDependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-spring": "^8.0.0"
+    "react-dom": "^16.12.0"
   },
   "dependencies": {
     "prop-types": "*",
